# tblis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  TBLISConfig.cmake  aclocal.m4  blis-git-tag  config.h.in  configure  configure.ac  install-sh  tblis.pc.in  tblis_config_h_cmake.in
.circleci/: config.yml
cmake/: ax_cmake.m4
m4/: aq_with_package.m4
python/: CMakeLists.txt  pytblis.cxx
src/: tblis.h
src/frame/1m/packm/: packm_blk_bsmtc.cxx  packm_blk_dpd.cxx
src/frame/1t/: add.cxx  add.h  dot.cxx  dot.h  reduce.cxx  scale.cxx  scale.h  set.cxx  shift.cxx  shift.h
src/frame/1t/dense/: add.cxx  add.hpp  reduce.cxx  scale.cxx  set.cxx  shift.cxx
src/frame/1t/dpd/: dot.cxx  set.cxx  util.hpp
src/frame/1t/indexed/: add.cxx  reduce.cxx  set.cxx  util.hpp
src/frame/1t/indexed_dpd/: scale.cxx  shift.cxx  util.hpp
src/frame/3m/gemm/: gemm_ker_bsmtc.cxx  gemm_ker_dpd.cxx
src/frame/3t/: mult.cxx  mult.h
src/frame/3t/dense/: mult.cxx  mult.hpp
src/frame/3t/dpd/: mult.cxx  mult.hpp
src/frame/3t/indexed/: mult.hpp
src/frame/3t/indexed_dpd/: mult.cxx  mult.hpp
src/frame/base/: alignment.hpp  basic_types.h  block_scatter.cxx  block_scatter.hpp  dpd_block_scatter.cxx  dpd_block_scatter.hpp  tensor.cxx  tensor.hpp  thread.cxx  thread.h
src/plugin/: bli_plugin_tblis.cxx  bli_plugin_tblis.h
src/plugin/ref_kernels/: gemm_bsmtc_ref.cxx  packm_bsmtc_ref.cxx  plugin_init_ref.cxx
tblis/: tblis_config.h.in
tblis/frame/0/: add.hpp  mult.hpp  reduce.hpp
tblis/frame/1m/packm/: packm_blk_bsmtc.cxx  packm_blk_dpd.cxx
tblis/frame/1t/: add.cxx  add.h  dot.cxx  dot.h  reduce.cxx  reduce.h  scale.cxx  scale.h  set.cxx  set.h  shift.cxx  shift.h
tblis/frame/1t/dense/: add.cxx  dot.cxx  dot.hpp  reduce.cxx  reduce.hpp  scale.cxx  scale.hpp  set.cxx  set.hpp  shift.cxx  shift.hpp
tblis/frame/1t/dpd/: add.cxx  reduce.cxx  scale.cxx  shift.cxx  util.hpp
tblis/frame/1t/indexed/: dot.cxx  scale.cxx  shift.cxx  util.hpp
tblis/frame/1t/indexed_dpd/: add.cxx  dot.cxx  reduce.cxx  set.cxx  util.hpp
tblis/frame/3m/gemm/: gemm_ker_bsmtc.cxx  gemm_ker_dpd.cxx
tblis/frame/3t/: mult.cxx  mult.h
tblis/frame/3t/dense/: mult.cxx  mult.hpp
tblis/frame/3t/dpd/: mult.cxx  mult.hpp
tblis/frame/3t/indexed/: mult.cxx  mult.hpp
tblis/frame/3t/indexed_dpd/: mult.cxx  mult.hpp
tblis/frame/base/: basic_types.h  block_scatter.cxx  dpd_block_scatter.cxx  dpd_block_scatter.hpp  tensor.cxx  tensor.hpp  thread.cxx  thread.h
tblis/plugin/: bli_plugin_tblis.h
tblis/plugin/config/: JOBARC
tblis/plugin/ref_kernels/: mult_ref.cxx  packm_bsmtc_ref.cxx
test/: random.hpp  test.cxx  test.hpp  test_install.cxx
test/1t/: replicate.cxx
test/3m/: gemm.cxx
test/3t/: contract.cxx
test/pkgconfig/: Makefile
